hard-gists/fa5755c7f7fa49b47961/run.log
=== Docker Run Log for fa5755c7f7fa49b47961 ===
Started at: Mi 29. Okt 21:39:15 CET 2025

[2025-10-29 21:39:15] START: Running container for fa5755c7f7fa49b47961
[2025-10-29 21:39:16] SUCCESS: Container a818eea5fd4f4398aa3e41a4e0e279e54579b3705aedf529ca0034b9b559813b started for fa5755c7f7fa49b47961
=== Container logs for fa5755c7f7fa49b47961 ===
  File "/snippet.py", line 37
    print name, ":"
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for fa5755c7f7fa49b47961 ===
[2025-10-29 21:39:18] INFO: Container a818eea5fd4f4398aa3e41a4e0e279e54579b3705aedf529ca0034b9b559813b has stopped
